Corrijo TP de IAA.

--- a/5 Ano/Inroduccion al Aprendizaje Automatizado/Soluciones/TP1/makefile
+++ b/5 Ano/Inroduccion al Aprendizaje Automatizado/Soluciones/TP1/makefile
@@ -2,7 +2,7 @@ all:
 	gcc randf.c rnorm.c -o rnorm -lm
 	gcc diagonal.c -o diagonal -lm
 	gcc randf.c esquina.c -o esquina
-	gcc randf.c espirales.c -o espirales
+	gcc randf.c espirales.c -o espirales -lm
 clean:
 	rm rnorm; rm diagonal; rm esquina; rm espirales; \
-	rm angulos; rm radios; rm espirales.jpg
+	rm espirales.jpg; rm espirales.data
