Corrijo error en esquina y agrego generador de nombres.

--- a/5 Ano/Inroduccion al Aprendizaje Automatizado/Soluciones/TP1/makefile
+++ b/5 Ano/Inroduccion al Aprendizaje Automatizado/Soluciones/TP1/makefile
@@ -3,6 +3,7 @@ all:
 	gcc diagonal.c -o diagonal -lm
 	gcc randf.c esquina.c -o esquina
 	gcc randf.c espirales.c -o espirales -lm
+	gcc names.c -o names
 clean:
 	rm rnorm; rm diagonal; rm esquina; rm espirales; \
-	rm espirales.jpg; rm espirales.data
+	rm espirales.jpg; rm espirales.data; rm names
